Made some changes to Port address.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=testdb;Username=postgres;Password=your_password"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CourseMate;Username=postgres;Password=admin123"
   },
 
   "Logging": {
