--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,9 +1,13 @@
 {
-
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=CourseMate;Username=postgres;Password=admin123"
   },
-
+  "Jwt": {
+    "Key": "KEYNOTSETYET",   //TODO: Change this in production environment
+    "Issuer": "CourseMate",
+    "Audience": "CourseMate-Users",
+    "ExpiryMinutes": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
