--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=CourseMate;Username=postgres;Password=admin123"
   },
   "Jwt": {
-    "Key": "KEYNOTSETYET",   //TODO: Change this in production environment
+    "Key": "KEYNOTSETYET",
     "Issuer": "CourseMate",
     "Audience": "CourseMate-Users",
     "ExpiryMinutes": 30
